tests/brave_new_world/signal_asynchrony/signal_async_bug.out
error: The two expressions did not evaluate to the same value (in transaction `signal_async(6, 7)`)
   ┌─ brave_new_world/signal_asynchrony/signal_async.prot:18:15
   │
18 │     assert_eq(data_out, dut.final_resp);
   │               ^^^^^^^^^^^^^^^^^^^^^^^^ LHS Value: 7, RHS Value: 0

Trace 0 execution failed.
